<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="HMIoutput" Id="{2c953719-72db-4e97-8c71-dbec88c08c22}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bHMIGreenLED : BOOL;	// True when crane is on.
	bHMIRedLED : BOOL;		// True when  fault.
	fHMIControlValveSignal : REAL; // -1 - 1 [-]

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>