<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_NotEnabled" Id="{e8d87ba8-6bd7-4439-a9f9-582b97ad65c0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_NotEnabled
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	HMIoutput.bHMIGreenLED := FALSE;
	HMIoutput.bHMIRedLED := FALSE;	
	
	HMIinput.bHMIStartSwitch := FALSE;
	HMIinput.bHMIStopSwitch := FALSE;]]></ST>
    </Implementation>
    <LineIds Name="FB_NotEnabled">
      <LineId Id="10" Count="3" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>